config/samples/security_v1alpha1_dast_external.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zapproxy
